--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -43,7 +42,7 @@
         android:gravity="bottom"
         android:text="@string/mobile"/>
     <EditText
-        android:id="@+id/moblileEdit"
+        android:id="@+id/mobileEdit"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_toEndOf="@id/email"
@@ -58,12 +57,12 @@
         android:gravity="bottom"
         android:text="@string/mobile2"/>
     <EditText
-        android:id="@+id/moblileEdit2"
+        android:id="@+id/mobileEdit2"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_toEndOf="@id/email"
         android:layout_marginTop="15dp"
-        android:layout_below="@id/moblileEdit"/>
+        android:layout_below="@id/mobileEdit"/>
     <TextView
         android:id="@+id/city"
         android:layout_width="100dp"
@@ -78,7 +77,7 @@
         android:layout_height="40dp"
         android:layout_toEndOf="@id/email"
         android:layout_marginTop="15dp"
-        android:layout_below="@id/moblileEdit2"/>
+        android:layout_below="@id/mobileEdit2"/>
     <Button
         android:id="@+id/save"
         android:layout_width="200dp"
@@ -86,7 +85,8 @@
         android:text="@string/save"
         android:layout_below="@id/city"
         android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:onClick="SaveData"/>
     <Button
         android:id="@+id/kill"
         android:layout_width="200dp"
@@ -94,6 +94,15 @@
         android:text="@string/kill"
         android:layout_below="@id/save"
         android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"/>
-
+        android:layout_centerHorizontal="true"
+        android:onClick="KillApp"/>
+    <Button
+        android:id="@+id/clear"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="@string/clear"
+        android:layout_below="@id/kill"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:onClick="clearData"/>
 </RelativeLayout>
